bugfix error text align

--- a/src/components/forms/_baseForm.scss
+++ b/src/components/forms/_baseForm.scss
@@ -157,6 +157,7 @@
       font-size: $font-size;
       font-weight: $font-weight-normal;
       margin: 0;
+      text-align: center;
     }
 
     .submit-button {
