--- a/src/components/forms/_taskForm.scss
+++ b/src/components/forms/_taskForm.scss
@@ -326,6 +326,7 @@
       font-size: $font-size;
       font-weight: $font-weight-normal;
       margin: 0;
+      text-align: center;
     }
 
     .submit-button {
